syntax = "proto3";

option csharp_namespace = "ServiceContract";

package ServiceContract;


// Trade service definition.
service TradeService {
  rpc GetAllTradesStream (TradeRequest) returns (stream TradeResult);
  rpc GetTradeById (TradeRequest) returns (TradeResult);
}

message TradeRequest{
    int32 id = 1;
}

message TradeResult{
    int32 id = 1;
    string counterparty = 2;
    string currency =3;
    int32 notional = 4;
}
